# oct-enface-quality-starter

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
checkpoints/: EffiNetV2_OCT_quality_Assess_2026.pth  README.md
src/oct_quality/: __init__.py  dataset.py  evaluate.py  infer.py  model.py  transforms.py
